--- a/HelloDemo/ClientApp/package.json
+++ b/HelloDemo/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "merge": "^1.2.1",
     "oidc-client": "^1.8.0",
     "react": "^16.0.0",
@@ -35,5 +35,11 @@
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
